# contextquilt

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  CONTEXTQUILT_ARCHITECTURE_V2.md  Context Quilt Memory Table (older but useful) Version 2.xlsx  Context Quilt Memory Table (older but useful).xlsx  Context Quilt Overview for Sales Material or General Explanation v2 .md  Context Quilt_ System Architecture Document 3.10.md  DEPLOYMENT.md  Dockerfile  Dockerfile.mcp  GEMINI.md  GETTING_STARTED.md  INVENTION_4_COMMUNICATION_PROFILE_DETAIL.md  LICENSE  Market_Analysis.md  Prompt Master - runt straighten quotes and zap gremlins in BBEdit.txt  README.md  Tool CallingOverview.md  Windsurf_vs_ContextQuilt_Analysis.md  context-quilt-system-architecture-v2.md  docker-compose.mcp.yml  docker-compose.prod.yml  docker-compose.yml  env.example  llm-gateway-project.md  main.py  memory_schema.yaml  patent_1_communication_profile.docx  patent_2_cross_app_memory.docx  pyproject.toml  requirements.txt  verify_context_patch_flow.py  verify_mcp.py
.claude/agents/: gemini-research-expert.md  patent-strategist.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
data/: seed_patches.json
docker/cq-backup/: Dockerfile  backup.sh  entrypoint.sh
docs/: context_quilt_implementation_guide.md  mcp-landing-page.md  openapi.yaml  quilt-visual.md
docs/architecture/: 00-overview.md  01-memory-model.md  02-pipeline.md  03-queue-and-lifecycle.md  04-recall.md  05-integration.md  06-configuration.md  07-api-reference.md  08-connected-quilt-model.md  (+4 more)
init-db/: 01_init.sql  02_graph_tables.sql  03_add_project_scope.sql  04_connected_quilt.sql  05_extraction_metrics.sql  06_projects_and_meetings.sql  08_byok_llm_keys.sql  09_ingestion_audit.sql  10_app_schema_registration.sql  10_register_extra_types.sql  11_shouldersurf_schema.json  12_permanence_override.sql  13_relax_patch_type_registry_pk.sql  14_delete_legacy_team_company.sql  15_backfill_acl_crud_perms.sql  16_backup_runs.sql  17_identification_source.sql  18_subscription_tier.sql
scripts/: backfill_voice_cleanup.py  debug_worker_insert.py  dump_patches.py  generate_seed_patches.py  inspect_db.py  load_seed_data.py  migrate_fix_persistence.py  migrate_normalization.py  migrate_profile_identity.py  migrate_prompt_versions.py  migrate_schema.py  migrate_usage_metrics.py  recover_origin_id_from_gp.py  register_ss_schema.py  restore.sh  seed_data.py  synthesize_passive_learner_history.py  test_pipeline_dialog.py  test_travel_agent.py  test_travel_scenarios_comprehensive.py  verify_context_patch.py  verify_data_synthesis.py  verify_identification_source.py  verify_passive_learning.py  verify_person_ownership_enforcer.py  verify_users_query.py
src/: auth.py  main.py  mcp_server.py  worker.py
tests/: verify_dashboard_api.py  verify_e2e.py
(+72 files in other folders)
